--- a/samples/drivers/i2s/i2s_codec/sample.yaml
+++ b/samples/drivers/i2s/i2s_codec/sample.yaml
@@ -10,6 +10,7 @@ tests:
       - mimxrt1060_evk/mimxrt1062/qspi
       - mimxrt1180_evk/mimxrt1189/cm33
       - mimxrt1180_evk/mimxrt1189/cm7
+      - frdm_mcxn236
     harness: console
     harness_config:
       type: one_line
