boards: native_sim: Workaround race condition in glibc
Explicitly link with libgcc_s to work around a race condition
in glibc when dynamically loading libgcc_s in multiple threads.

The race condition was observed when running native_sim with
CONFIG_REBOOT=y and CONFIG_NATIVE_SIM_REBOOT=y and rebooting quickly
from main().

Signed-off-by: Tim Pambor <tim.pambor@codewrights.de>

--- a/boards/native/native_sim/CMakeLists.txt
+++ b/boards/native/native_sim/CMakeLists.txt
@@ -16,6 +16,10 @@ zephyr_library_sources(
 if(CONFIG_NATIVE_SIM_REBOOT)
   zephyr_library_sources(reboot.c)
   target_sources(native_simulator INTERFACE reboot_bottom.c)
+
+  # Explicitly link with libgcc_s to work around a race condition in glibc when
+  # dynamically loading libgcc_s in multiple threads.
+  target_link_options(native_simulator INTERFACE "-lgcc_s")
 endif()
 
 zephyr_include_directories(
