--- a/drivers/sensor/maxim/max30101/Kconfig
+++ b/drivers/sensor/maxim/max30101/Kconfig
@@ -13,6 +13,9 @@ menuconfig MAX30101
 
 if MAX30101
 
+config MAX30101_DIE_TEMPERATURE
+	bool "Die temperature acquisition"
+
 choice MAX30101_TRIGGER_MODE
 	prompt "Trigger mode"
 	default MAX30101_TRIGGER_NONE
