--- a/boards/nxp/frdm_mcxa153/frdm_mcxa153.dts
+++ b/boards/nxp/frdm_mcxa153/frdm_mcxa153.dts
@@ -72,6 +72,25 @@
 		};
 	};
 
+	mikrobus_header: mikrobus-connector {
+		compatible = "mikro-bus";
+		#gpio-cells = <2>;
+		gpio-map-mask = <0xffffffff 0xffffffc0>;
+		gpio-map-pass-thru = <0 0x3f>;
+		gpio-map = <0 0 &gpio3 30 0>,  /* AN */
+			   <1 0 &gpio3 1 0>,   /* RST */
+			   <2 0 &gpio1 3 0>,   /* CS */
+			   <3 0 &gpio1 1 0>,   /* SCK */
+			   <4 0 &gpio1 2 0>,   /* MISO */
+			   <5 0 &gpio1 0 0>,   /* MOSI */
+			   <6 0 &gpio3 12 0>,  /* PWM */
+			   <7 0 &gpio2 5 0>,   /* INT */
+			   <8 0 &gpio3 14 0>,  /* RX */
+			   <9 0 &gpio3 15 0>,  /* TX */
+			   <10 0 &gpio3 27 0>, /* GPIO, Not a SCL  */
+			   <11 0 &gpio3 28 0>; /* GPIO, Not a SDA  */
+	};
+
 	arduino_header: arduino-connector {
 		compatible = "arduino-header-r3";
 		#gpio-cells = <2>;
@@ -207,6 +226,8 @@ arduino_i2c: &lpi2c0 {};
 	pinctrl-names = "default";
 };
 
+mikrobus_spi: &lpspi0 {};
+
 &lpspi1 {
 	status = "okay";
 	pinctrl-0 = <&pinmux_lpspi1>;
@@ -232,6 +253,8 @@ arduino_spi: &lpspi1 {};
 	pinctrl-0 = <&pinmux_lpuart2>;
 	pinctrl-names = "default";
 };
+
+mikrobus_serial: &lpuart2 {};
 
 /*
  * Uses OS timer as the kernel timer
