--- a/dts/arm/ti/mspm0/g/mspm0g.dtsi
+++ b/dts/arm/ti/mspm0/g/mspm0g.dtsi
@@ -31,7 +31,7 @@
 		timg0: timg0@40084000 {
 			compatible = "ti,mspm0-timer";
 			reg = <0x40084000 0x2000>;
-			clocks = <&ckm MSPM0_CLOCK_LFCLK>;
+			clocks = <&ckm MSPM0_CLOCK_ULPCLK>;
 			interrupts = <16 0>;
 			ti,clk-prescaler = <255>;
 			ti,clk-div = <1>;
@@ -48,7 +48,7 @@
 			compatible = "ti,mspm0-timer";
 			reg = <0x40868000 0x2000>;
 			interrupts = <17 0>;
-			clocks = <&ckm MSPM0_CLOCK_ULPCLK>;
+			clocks = <&ckm MSPM0_CLOCK_MCLK>;
 			ti,clk-prescaler = <255>;
 			ti,clk-div = <1>;
 			status = "disabled";
@@ -64,7 +64,7 @@
 			compatible = "ti,mspm0-timer";
 			reg = <0x4086a000 0x2000>;
 			interrupts = <20 0>;
-			clocks = <&ckm MSPM0_CLOCK_ULPCLK>;
+			clocks = <&ckm MSPM0_CLOCK_MCLK>;
 			ti,clk-prescaler = <255>;
 			ti,clk-div = <1>;
 			status = "disabled";
@@ -80,7 +80,7 @@
 			compatible = "ti,mspm0-timer";
 			reg = <0x40870000 0x2000>;
 			interrupts = <21 0>;
-			clocks = <&ckm MSPM0_CLOCK_ULPCLK>;
+			clocks = <&ckm MSPM0_CLOCK_MCLK>;
 			ti,clk-prescaler = <0>; /* None */
 			ti,clk-div = <1>;
 			status = "disabled";
