--- a/tests/drivers/flash/common/testcase.yaml
+++ b/tests/drivers/flash/common/testcase.yaml
@@ -70,6 +70,17 @@ tests:
       - nrf54l15dk/nrf54l15/cpuapp
     harness_config:
       fixture: external_flash
+  drivers.flash.common.no_explicit_erase.sfdp_runtime:
+    platform_allow:
+      - nrf54l15dk/nrf54l05/cpuapp
+      - nrf54l15dk/nrf54l10/cpuapp
+      - nrf54l15dk/nrf54l15/cpuapp
+    harness_config:
+      fixture: external_flash
+    extra_configs:
+      - CONFIG_SPI_NOR_SFDP_RUNTIME=y
+    extra_args:
+      - DTC_OVERLAY_FILE=boards/nrf54l15dk_remove_dt_sfdp.overlay
   drivers.flash.common.no_explicit_erase.nrf54h:
     platform_allow:
       - nrf54h20dk/nrf54h20/cpuapp
