tests: pwm: add Infineon kit_pse84_eval
 - Add overlay files for the pwm_api and
   pwm_gpio_loopback tests
 - Update platform_allow for pwm_gpio_loopback

Signed-off-by: Bill Waters <bill.waters@infineon.com>

--- a/tests/drivers/pwm/pwm_gpio_loopback/testcase.yaml
+++ b/tests/drivers/pwm/pwm_gpio_loopback/testcase.yaml
@@ -31,3 +31,5 @@ tests:
   drivers.pwm.gpio_loopback.ifx:
     platform_allow:
       - cyw920829m2evk_02
+      - kit_pse84_eval/pse846gps2dbzc4a/m33
+      - kit_pse84_eval/pse846gps2dbzc4a/m55
