--- a/tests/bsim/bluetooth/host/misc/conn_stress/central/prj.conf
+++ b/tests/bsim/bluetooth/host/misc/conn_stress/central/prj.conf
@@ -23,9 +23,8 @@ CONFIG_ASSERT_VERBOSE=y
 CONFIG_ASSERT_ON_ERRORS=y
 
 # TODO: use default 3
-# we get an ATT timeout if 3
-# we get an SMP timeout if 10
-# CONFIG_BT_L2CAP_TX_BUF_COUNT=10
+# we get an ATT timeout if 3 or SMP timeout if 10
+CONFIG_BT_L2CAP_TX_BUF_COUNT=10
 
 # deadlock on central with the default.
 # the problem is that `tx_free` is called from both syswq and btwq in that case.
