--- a/drivers/bluetooth/hci/Kconfig
+++ b/drivers/bluetooth/hci/Kconfig
@@ -182,7 +182,7 @@ config BT_SILABS_SIWX91X
 	bool "Silabs SiWx91x Bluetooth interface"
 	default y
 	depends on DT_HAS_SILABS_SIWX91X_BT_HCI_ENABLED
-	select WISECONNECT_NETWORK_STACK
+	select SILABS_SIWX91X_NWP
 	select ENTROPY_GENERATOR
 	help
 	  Use Silicon Labs Wiseconnect 3.x Bluetooth library to connect to the controller.
