dts: arm: stm32n6: Add NPU Cache clock and reset lines
Add the description of NPU Cache (aka cacheaxi) to allow configuring
them in NPU Cache driver.
I intentionally chose this over creating a new dedicated node as
the exclusive user is NPU Cache and this could be done as part of
NPU driver initialization.

Update the NPU driver to take those into account as part of its init
routine.

Signed-off-by: Mickael Guene <mickael.guene@st.com>
Signed-off-by: Erwan Gouriou <erwan.gouriou@st.com>

--- a/dts/arm/st/n6/stm32n6.dtsi
+++ b/dts/arm/st/n6/stm32n6.dtsi
@@ -1295,8 +1295,11 @@
 		npu: npu@580c0000 {
 			compatible = "st,stm32-npu";
 			reg = <0x580c0000 0x1000>;
-			clocks = <&rcc STM32_CLOCK(AHB5, 31)>;
-			resets = <&rctl STM32_RESET(AHB5, 31)>;
+			clocks = <&rcc STM32_CLOCK(AHB5, 31)>,
+				 <&rcc STM32_CLOCK(AHB5, 30)>;
+			clock-names = "npu", "cacheaxi";
+			resets = <&rctl STM32_RESET(AHB5, 31)>,
+				 <&rctl STM32_RESET(AHB5, 30)>;
 			status = "disabled";
 		};
 
