tests: pm: Fix collecting data after fail
Fix for collecting and presenting measured data.
During verify measured values, the test skipped all results
after the first incorrect one. Furthermore, it duplicated
already collected data on the output list. So in this case the
result list include wrong data.

Signed-off-by: Artur Wilczak <arturx.wilczak@intel.com>

--- a/tests/subsys/pm/power_states/testcase.yaml
+++ b/tests/subsys/pm/power_states/testcase.yaml
@@ -17,7 +17,7 @@ common:
       tolerance_percentage: 20
     record:
       regex:
-        - "RECORD:(?P<metrics>.*)"
+        - "^INFO: RECORD:(?P<metrics>.*)"
       as_json: ['metrics']
 
 tests:
